// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  className="root"
>
  <WithStyles(ForwardRef(Typography))
    className="headline"
    variant="h4"
  >
    Close position
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(Connect(withStateHandlers(withHandlers(ClosePositionForm))))
    backButton={
      <ForwardRef(WithStyles)
        color="primary"
        onClick={[Function]}
      >
        Cancel
      </ForwardRef(WithStyles)>
    }
    id="id"
    onClose={[Function]}
  />
</div>
`;

exports[`matches snapshot when loading 1`] = `
<div
  className="root"
>
  <WithStyles(ForwardRef(Typography))
    className="headline"
    variant="h4"
  >
    Close position
  </WithStyles(ForwardRef(Typography))>
  <Progress />
</div>
`;
